--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
+<style>
+html, body {
+	margin: 0px;
+	padding: 0px;
+	font-family:Verdana, Geneva, sans-serif;
+	background-color: #1a1a1a;
+	text-align: center;
+	width: 100%;
+    height: 100%; 
+}
+</style>
 
-<video width="320" height="240" controls>
-  <source src="movie.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
-  Your browser does not support the video tag.
-</video>
+<link href="test_embed.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="test_player.html?embedIFrameId=embeddedSmartPlayerInstance" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </body>
 </html>
