--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ html, body {
 <link href="test_embed.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="test_player.html?embedIFrameId=embeddedSmartPlayerInstance" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="test_player.html" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </body>
 </html>
