--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 
 
+<body>
+
+<video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="test_video.html">
+  Your browser does not support the video tag.
+</video>
+
+</body>
+
+
 <link href="test_embed.css" rel="stylesheet" type="text/css">
 </head>
 <body>
