--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <body>
 
 <video width="320" height="240" controls>
-  <source src="movie.mp4" type="video/mp4">
-  <source src="test_video.html">
+  <source src="test.html">
   Your browser does not support the video tag.
 </video>
 
@@ -16,7 +15,7 @@
 <link href="test_embed.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="test_player.html" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="test.html" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </body>
 </html>
