--- a/index.html
+++ b/index.html
@@ -3,19 +3,9 @@
 
 
 <body>
+<link href="https://github.com/cantcodeworthcrap/cantcodeworthgrap.github.io/blob/master/test_embed.css" rel="stylesheet" type="text/css">
 
-<video width="320" height="240" controls>
-  <source src="test.html">
-  Your browser does not support the video tag.
-</video>
-
-</body>
-
-
-<link href="test_embed.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="test.html" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-
+<iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="https://github.com/cantcodeworthcrap/cantcodeworthgrap.github.io/blob/master/test.html?embedIFrameId=embeddedSmartPlayerInstance" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  
 </body>
 </html>
