--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@
 <iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="https://github.com/cantcodeworthcrap/cantcodeworthgrap.github.io/blob/master/test.html?embedIFrameId=embeddedSmartPlayerInstance" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
   
 </body>
+  
+  
+  <script src="techsmith-smart-player.min.js"></script> <script src="config_xml.js"></script>
+   
 </html>
