--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </body>
   
   
-  <script src="techsmith-smart-player.min.js"></script> <script src="config_xml.js"></script>
+  <script src="techsmith-smart-player.min.js"></script> 
    
 </html>
